fixed navbar spacing error

--- a/less/components/navbar.less
+++ b/less/components/navbar.less
@@ -9,10 +9,8 @@
    .navbar {
      list-style-type: none;
      padding: 0;
-     margin: 0;
-     overflow: hidden;
-     display: inline;
-     
+     margin: 0 40px 0 215px;
+     overflow: hidden;     
      
      .regular-link {
        float: left;  
@@ -35,13 +33,16 @@
 
        &.account {
           float: right;
-          padding-right: 40px;
+          right: 40px;
        }
      }
    }
 
    .wombat-logo {
-     float: left;
+     position: absolute;
+     display: inline-block;
+     top: 0;
+     left: 0;
      margin: 7px 40px 30px;
    }
 }
