--- a/less/panels/account.less
+++ b/less/panels/account.less
@@ -5,3 +5,9 @@
   .emphasized-button(@white, @black-20);
 }
 
+.title {
+  font-size: 30px;
+  font-weight: 600;
+  color: @white;
+  display: inline-block;
+}
